section-5/64-null-resource-ex1.tf
provider "aws" {
  region     = "ap-southeast-1"
}

resource "aws_eip" "lb" {
  vpc      = true
  depends_on = [null_resource.health_check]
}


resource "null_resource" "health_check" {

 provisioner "local-exec" {

    command = "curl https://google.com"
  }
}
